<resources>
    <string name="app_name">ShoppingList</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="cadastrar_novo_usuario">Cadastrar Novo Usuário</string>
    <string name="nome">Nome</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listas_de_compras">Listas de Compras</string>
    <string name="adicionar_lista">Adicionar lista</string>
    <string name="nome_do_item">Nome do item</string>
    <string name="categoria">Categoria</string>
    <string name="nome_da_lista">Nome da lista</string>
    <string name="quantidade">Quantidade</string>
</resources>